# azure-transcription-python-client

./: README.md  pyproject.toml  setup.py
azure_transcription_client/: __init__.py  api_client.py
docs/: DefaultApi.md  WebHook.md  WebHookEvents1.md  WebHookUpdate.md
examples/: transcription_example.py
test/: test_api_speechtotext_v30_datasets_locales_get200_application_json_response.py  test_api_speechtotext_v30_endpoints_locales_get200_application_json_response.py  test_api_speechtotext_v30_evaluations_locales_get200_application_json_response.py  test_api_speechtotext_v30_models_locales_get200_application_json_response.py  test_api_speechtotext_v30_projects_locales_get200_application_json_response.py  test_api_speechtotext_v30_transcriptions_locales_get200_application_json_response.py  test_component.py  test_dataset.py  test_dataset_properties.py  test_dataset_update.py  test_default_api.py  test_endpoint.py  test_endpoint_links.py  test_endpoint_properties.py  test_endpoint_properties_update.py  test_endpoint_update.py  test_entity_error.py  test_entity_reference.py  test_error.py  test_error_content.py  test_error_detail.py  test_evaluation.py  test_evaluation_properties.py  test_evaluation_update.py  test_file.py  test_file_links.py  test_file_properties.py  test_health_status.py  test_inner_error.py  test_inner_error_v2.py  test_internal_model.py  test_links.py  test_management_model.py  test_management_model_array.py  test_management_model_properties.py  test_model.py  test_model_copy.py  test_model_deprecation_dates.py  test_model_file.py  (+26 more)
(+71 files in other folders)
